 * Maintenance: Migrate select all on focus/click behavior to Stimulus, used on the image URL generator (Chiemezuo Akujobi)
 * Maintenance: Add support for a `reset` method to support Stimulus driven dynamic field resets via the `w-action` controller (Chiemezuo Akujobi)
 * Maintenance: Add support for a `notify` target on the Stimulus dialog for dispatching events internally (Chiemezuo Akujobi)

5.1.3 (xx.xx.20xx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Fix `SnippetBulkAction` not respecting `models` definition (Sandro Rodrigues)
 * Fix: Correctly quote non-numeric primary keys on snippet inspect view (Sage Abdullah)
 * Fix: Prevent crash on snippet inspect view when displaying a null foreign key to an image (Sage Abdullah)
 * Fix: Populate the correct return value when creating a new snippet within the snippet chooser (claudobahn)
 * Fix: Reinstate missing filter by page type on page search (Matt Westcott)


5.1.2 (25.09.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Avoid use of `ignore_conflicts` when creating extra permissions for snippets, for SQL Server compatibility (Sage Abdullah)
 * Fix: Ensure sequence on `wagtailsearchpromotions_query` table is correctly set after migrating data (Jake Howard)
 * Fix: Change spreadsheet export headings to match listing view column headings (Christer Jensen, Sage Abdullah)
 * Fix: Fix numbers, booleans, and `None` from being exported as strings (Christer Jensen)
 * Fix: Restore fallback on full-word search for snippet choosers and generic index views (Matt Westcott)
 * Fix: Restore compatibility with pre-7.15 versions of the Elasticsearch Python library, allowing use of Opensearch (Matt Westcott)
 * Fix: Fix error when pickling BaseSiteSetting instances (Matt Westcott)
 * Maintenance: For Python 3.13 support - upgrade Willow to v1.6.2, replace `imghdr` with Willow's built-in MIME type detection (Jake Howard)


5.1.1 (14.08.2023)
~~~~~~~~~~~~~~~~~~
