@@ -148,6 +148,7 @@ This feature was developed by Paarth Agarwal and Thibaud Colas as part of the Go
  * Migrate select all on focus/click behavior to Stimulus, used on the image URL generator (Chiemezuo Akujobi)
  * Add support for a `reset` method to support Stimulus driven dynamic field resets via the `w-action` controller (Chiemezuo Akujobi)
  * Add support for a `notify` target on the Stimulus dialog for dispatching events internally (Chiemezuo Akujobi)
+ * Migrate publishing schedule dialog field resets to Stimulus (Chiemezuo Akujobi)
 
 
 ## Upgrade considerations - changes affecting all projects
